--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/platform-fastify": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
+    "@types/express": "^4.17.11",
     "aws-lambda": "^1.0.6",
+    "aws-lambda-fastify": "^1.4.4",
     "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "fastify": "^3.14.2",
+    "fastify-swagger": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "@types/express": "^4.17.11",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
